20 Aug 2005 mipsator
 * replaced old makefile template by the one generated by pmkscan
   (CFLAGS has been modified and added CONFDIR and PRIVSEP_USER).
 * enabled compat tests.
 * updated pmkscan latest changes (polishing).

18 Aug 2005 mipsator
 * added MANDIR and SYSCONFDIR support in pmkscan.
 * tuned pmkcfg.sh to prepare switch from hand made Makefile to
   pmkscan generated Makefile.

17 Aug 2005 mipsator
 * fixed %c conversion in vsnprintf().
 * updated pmkcfg.sh and config.in.pmk in sync with compat.

10 Aug 2005 mipsator
 * added strdup() in compat.
 * fragmented a bit vsnp
 rintf() related functions.

09 Aug 2005 mipsator
 * handle template files in pmkscan.

06 Aug 2005 mipsator
 * added latest work done on pmkscan. The makefile generation is almost
   complete. Some work has to be done on pmkfile generation for the next
   release.

02 Aug 2005 mipsator
 * added da_sort() to sort the content of the dynary.
 * first import of code building functions for further use in pmk.
 * fixed bugs in pathtools.
 * synced pmkcfg.sh and pmkfile with compat.
 * updated pmkscan data.
 * cleaned test sources.

21 Jul 2005 mipsator
 * added ISO C99 vsnprintf() implementation (missing wide char support).
 * rewritten a bit compat.

07 Jul 2005 mipsator
 * added type data support in pmkscan.

05 Jul 2005 mipsator
 * finished support for man pages and data files in pmkscan's makefile
   generation.
 * fixed recursive scanning of directory in pmkscan.

# snapshot 0.9.3-s1

01 Jul 2005 mipsator
 * fixed scan_dir() by replacing use of non portable member of structure
   dirent by the use of stat(). This should fix problems encountered on
   Solaris 8.
 * fixed our strlcpy().
 * fixed CPP and CC values in pmkcfg.sh script.

30 Jun 2005 mreindl
 * include config.h in compat/pmk_sys_types.h.

30 Jun 2005 mipsator
 * added support for a configuration script in pmkscan.
 * added an example of configuration script.

13 Jun 2005 mipsator