@@ -1,103 +1,487 @@
-# $Id$
+# Makefile template generated by pmkscan (2005-08-21 11:29).
 
-CC=		@CC@
 CPP=		@CPP@
+
+# language specific
 AS=		@AS@
+ASFLAGS=
+CC=		@CC@
+CFLAGS=		@CFLAGS@ $(WARN) $(DBGFLAGS)
 
-# Warning options, uncomment as your need
-#WARN=		-Wall
-#WARN=		-Werror
-#WARN=		-ansi -pedantic
-#WARN=		-Wall -Werror -ansi -pedantic
-
-DEBUG=		-g
-
-CFLAGS=		@CFLAGS@ $(WARN) $(DEBUG)
+# misc stuff
+LINKER=		@CC@
+# LDFLAGS shall contain -lc if used with ld
 LDFLAGS=	@LDFLAGS@
 
+INSTALL=	@INSTALL@
+INSTALL_BIN=	$(INSTALL) -m 755
+INSTALL_DATA=	$(INSTALL) -m 644
+INSTALL_DIR=	$(INSTALL) -d -m 755
+INSTALL_MAN=	$(INSTALL) -m 644
+INSTALL_SBIN=	$(INSTALL) -m 755
 
-CI_OBJS=	../common.o ../compat.o ../detect_cpu.o ../detect_cpu_asm.o \
-		../dynarray.o ../hash.o ../parse.o ../pmk_obj.o ../prseng.o \
-		cpuid_test.o
+RM=		rm
+RMFLAGS=	-rf
 
-C_OBJS=		../common.o ../compat.o ../detect.o ../dynarray.o ../hash.o \
-		../parse.o ../pmk_obj.o ../prseng.o comp_test.o
+# specific directories
+PREFIX=		@PREFIX@
+BINDIR=		@BINDIR@
+SBINDIR=	@SBINDIR@
+DATADIR=	@DATADIR@
+SYSCONFDIR=	@SYSCONFDIR@
 
-CPT_OBJS=	../compat.o compat_test.o
+.SUFFIXES: .o .s .c .C .cc .cxx .cpp
 
-DA_OBJS=	../compat.o ../dynarray.o da_test.o
+# assembly suffix
+# we use CPP to be more portable
+.s.o:
+	$(CPP) $< | sed '/^#/d' > tmp_asm.s
+	$(AS) $(ASFLAGS) -o $@ tmp_asm.s
+	$(RM) $(RMFLAGS) tmp_asm.s
 
-GC_OBJS=	../common.o ../compat.o ../detect.o ../dynarray.o ../hash.o \
-		../parse.o ../pmk_obj.o ../prseng.o gen_comp_test.o
-
-H_OBJS=		../compat.o ../hash.o hash_test.o
-
-MK_OBJS=	../common.o ../compat.o ../dynarray.o mkvar_test.o
-
-PRS_OBJS=	../autoconf.o ../common.o ../cfgtool.o ../detect.o \
-		../dynarray.o ../func.o ../functool.o ../hash.o \
-		../hash_tools.o ../parse.o ../pathtools.o ../pmk_obj.o \
-		../pkgconfig.o ../prseng.o parser_test.o
-
-PTH_OBJS=	../compat.o ../pathtools.o path_test.o
-
-PC_OBJS=	../common.o ../compat.o ../dynarray.o ../hash.o ../parse.o \
-		../pkgconfig.o ../pmk_obj.o ../prseng.o pkgconfig_test.o
-
-PL_OBJS=	../common.o ../compat.o ../dynarray.o ../hash.o ../pmk_obj.o \
-		../parse_lang.o ../prseng.o plang_test.o
-
-all: comp compat cpuid dynary gencomp hash mkvar parser path pkgconfig
-
+# C suffixes
 .c.o:
 	$(CC) $(CFLAGS) -o $@ -c $<
 
-.s.o:
-	$(CPP) $< | sed '/^#/d' > tmp_asm.s
-	$(AS) -o $@ tmp_asm.s
-	rm tmp_asm.s
+.C.o:
+	$(CC) $(CFLAGS) -o $@ -c $<
 
-config:
-	@if [ ! -f ../compat/config.h ]; then \
-		echo "Not configured, run pmkcfg.sh first."; \
-		exit 1; \
-	fi
+.cc.o:
+	$(CC) $(CFLAGS) -o $@ -c $<
 
-comp: config $(C_OBJS)
-	$(CC) $(LDFLAGS) -o comp_test $(C_OBJS)
 
-compat: config $(CPT_OBJS)
-	$(CC) $(LDFLAGS) -o compat_test $(CPT_OBJS)
+#
+# object dependency lists
+#
+___AUTOCONF_SRCS=	../autoconf.c ../autoconf.h ../cfgtool.h ../common.h \
+			../compat/config.h ../compat/pmk_ctype.h \
+			../compat/pmk_libgen.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../compat/pmk_sys_types.h ../compat/pmk_unistd.h \
+			../dynarray.h ../errmsg.h ../functool.h \
+			../hash.h ../hash_tools.h ../parse.h \
+			../pathtools.h ../pmk.h ../pmk_obj.h \
+			../premake.h ../prseng.h
 
-cpuid: config $(CI_OBJS)
-	$(CC) $(LDFLAGS) -o cpuid_test $(CI_OBJS)
+___CFGTOOL_SRCS=	../cfgtool.c ../cfgtool.h ../common.h \
+			../compat/config.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../dynarray.h ../errmsg.h ../hash.h ../parse.h \
+			../pmk_obj.h ../premake.h ../prseng.h
 
-dynary: config $(DA_OBJS)
-	$(CC) $(LDFLAGS) -o da_test $(DA_OBJS)
+___COMMON_SRCS=	../common.c ../common.h ../compat/config.h \
+		../compat/pmk_stdbool.h ../compat/pmk_stdio.h \
+		../compat/pmk_string.h ../compat/pmk_unistd.h \
+		../dynarray.h ../errmsg.h ../hash.h ../pmk_obj.h \
+		../premake.h
 
-gencomp: config $(GC_OBJS)
-	$(CC) $(LDFLAGS) -o gen_comp_test $(GC_OBJS)
+___COMPAT_SRCS=	../compat.c ../compat.h ../compat/config.h \
+		../compat/pmk_ctype.h ../compat/pmk_libgen.h \
+		../compat/pmk_stdbool.h ../compat/pmk_stdio.h \
+		../compat/pmk_string.h ../compat/pmk_sys_types.h \
+		../compat/pmk_unistd.h
 
-hash: config $(H_OBJS)
-	$(CC) $(LDFLAGS) -o hash_test $(H_OBJS)
+___DETECT_SRCS=	../common.h ../compat/config.h ../compat/pmk_stdbool.h \
+		../compat/pmk_stdio.h ../compat/pmk_string.h \
+		../compat/pmk_unistd.h ../detect.c ../detect.h \
+		../dynarray.h ../errmsg.h ../hash.h ../parse.h \
+		../pmk_obj.h ../premake.h ../prseng.h
 
-mkvar: config $(MK_OBJS)
-	$(CC)  $(LDFLAGS) -o mkvar_test $(MK_OBJS)
+___DETECT_CPU_SRCS=	../common.h ../compat/config.h \
+			../compat/pmk_stdbool.h ../compat/pmk_stdio.h \
+			../compat/pmk_string.h ../compat/pmk_sys_types.h \
+			../cpu_arch_def.h ../detect_cpu.c \
+			../detect_cpu.h ../detect_cpu_asm.h \
+			../dynarray.h ../errmsg.h ../hash.h ../parse.h \
+			../pmk_obj.h ../premake.h ../prseng.h
 
-parser: config $(PRS_OBJS)
-	$(CC) $(LDFLAGS) -o parser_test $(PRS_OBJS)
+___DETECT_CPU_ASM_SRCS=	../cpu_arch_def.h ../detect_cpu_asm.s
 
-path: config $(PTH_OBJS)
-	$(CC) $(LDFLAGS) -o path_test $(PTH_OBJS)
+___DYNARRAY_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../dynarray.c ../dynarray.h
 
-plang: config $(PL_OBJS)
-	$(CC) $(LDFLAGS) -o plang_test $(PL_OBJS)
+___FUNC_SRCS=	../autoconf.h ../cfgtool.h ../common.h ../compat/config.h \
+		../compat/pmk_stdbool.h ../compat/pmk_stdio.h \
+		../compat/pmk_string.h ../compat/pmk_unistd.h \
+		../detect.h ../dynarray.h ../errmsg.h ../func.c \
+		../func.h ../functool.h ../hash.h ../hash_tools.h \
+		../parse.h ../pkgconfig.h ../pmk.h ../pmk_obj.h \
+		../premake.h ../prseng.h
 
-pkgconfig: config $(PC_OBJS)
-	$(CC) $(LDFLAGS) -o pkgconfig_test $(PC_OBJS)
+___FUNCTOOL_SRCS=	../cfgtool.h ../common.h ../compat/config.h \
+			../compat/pmk_ctype.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../compat/pmk_unistd.h ../dynarray.h ../errmsg.h \
+			../functool.c ../functool.h ../hash.h \
+			../hash_tools.h ../parse.h ../pmk.h ../pmk_obj.h \
+			../premake.h ../prseng.h
 
-clean:
-	rm -f $(CI_OBJS) $(C_OBJS) $(DA_OBJS) $(GC_OBJS)
-	rm -f $(H_OBJS) $(MK_OBJS) $(PRS_OBJS) $(PL_OBJS)
-	rm -f $(PTH_OBJS) $(PC_OBJS) $(CPT_OBJS)
-	rm -f *_test *.core
+___HASH_SRCS=	../common.h ../compat/config.h ../compat/pmk_stdbool.h \
+		../compat/pmk_stdio.h ../compat/pmk_string.h \
+		../dynarray.h ../errmsg.h ../hash.c ../hash.h \
+		../pmk_obj.h ../premake.h
+
+___HASH_TOOLS_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../dynarray.h ../errmsg.h ../hash.h \
+			../hash_tools.c ../hash_tools.h ../pmk_obj.h \
+			../premake.h
+
+___PARSE_SRCS=	../common.h ../compat/config.h ../compat/pmk_ctype.h \
+		../compat/pmk_stdbool.h ../compat/pmk_stdio.h \
+		../compat/pmk_string.h ../dynarray.h ../errmsg.h \
+		../hash.h ../parse.c ../parse.h ../pmk_obj.h \
+		../premake.h ../prseng.h
+
+___PARSE_LANG_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../parse_lang.c ../parse_lang.h ../prseng.h
+
+___PATHTOOLS_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../pathtools.c ../pathtools.h
+
+___PKGCONFIG_SRCS=	../common.h ../compat/config.h ../compat/pmk_ctype.h \
+			../compat/pmk_stdbool.h ../compat/pmk_stdio.h \
+			../compat/pmk_string.h ../compat/pmk_sys_types.h \
+			../dynarray.h ../errmsg.h ../hash.h \
+			../hash_tools.h ../parse.h ../pkgconfig.c \
+			../pkgconfig.h ../pmk_obj.h ../premake.h \
+			../prseng.h
+
+___PMK_SRCS=	../autoconf.h ../cfgtool.h ../common.h ../compat/config.h \
+		../compat/pmk_ctype.h ../compat/pmk_libgen.h \
+		../compat/pmk_stdbool.h ../compat/pmk_stdio.h \
+		../compat/pmk_string.h ../compat/pmk_sys_types.h \
+		../compat/pmk_unistd.h ../dynarray.h ../errmsg.h \
+		../func.h ../hash.h ../hash_tools.h ../parse.h \
+		../pathtools.h ../pmk.c ../pmk.h ../pmk_obj.h \
+		../premake.h ../prseng.h
+
+___PMK_OBJ_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../dynarray.h ../hash.h ../pmk_obj.c \
+			../pmk_obj.h
+
+___PMKINSTALL_SRCS=	../common.h ../compat/config.h ../compat/pmk_ctype.h \
+			../compat/pmk_libgen.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../compat/pmk_sys_types.h ../compat/pmk_unistd.h \
+			../dynarray.h ../errmsg.h ../hash.h \
+			../pathtools.h ../pmk_obj.h ../pmkinstall.c \
+			../pmkinstall.h ../premake.h
+
+___PMKPC_SRCS=	../cfgtool.h ../common.h ../compat/config.h \
+		../compat/pmk_stdbool.h ../compat/pmk_stdio.h \
+		../compat/pmk_string.h ../dynarray.h ../errmsg.h \
+		../hash.h ../hash_tools.h ../parse.h ../pkgconfig.h \
+		../pmk_obj.h ../pmkpc.c ../pmkpc.h ../premake.h \
+		../prseng.h
+
+___PMKSCAN_SRCS=	../common.h ../compat/config.h ../compat/pmk_ctype.h \
+			../compat/pmk_libgen.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../compat/pmk_sys_types.h ../compat/pmk_unistd.h \
+			../dynarray.h ../errmsg.h ../hash.h \
+			../hash_tools.h ../parse.h ../parse_lang.h \
+			../pathtools.h ../pmk_obj.h ../pmkscan.c \
+			../pmkscan.h ../premake.h ../prseng.h
+
+___PMKSETUP_SRCS=	../common.h ../compat/config.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../compat/pmk_sys_types.h ../compat/pmk_unistd.h \
+			../cpu_arch_def.h ../detect_cpu.h ../dynarray.h \
+			../errmsg.h ../hash.h ../parse.h ../pmk_obj.h \
+			../pmksetup.c ../pmksetup.h ../premake.h \
+			../prseng.h
+
+___PRSENG_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+		../compat/pmk_stdio.h ../compat/pmk_string.h ../prseng.c \
+		../prseng.h
+
+COMP_TEST_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+		../compat/pmk_string.h ../detect.h ../dynarray.h \
+		../errmsg.h ../hash.h ../parse.h ../pmk_obj.h \
+		../premake.h ../prseng.h comp_test.c
+
+COMPAT_TEST_SRCS=	../compat.h ../compat/config.h ../compat/pmk_stdbool.h \
+			../compat/pmk_string.h compat_test.c
+
+CPUID_TEST_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+			../compat/pmk_sys_types.h ../cpu_arch_def.h \
+			../detect_cpu.h ../detect_cpu_asm.h \
+			../dynarray.h ../errmsg.h ../hash.h ../parse.h \
+			../pmk_obj.h ../premake.h ../prseng.h \
+			cpuid_test.c
+
+DA_TEST_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+		../compat/pmk_string.h ../dynarray.h da_test.c
+
+GEN_COMP_TEST_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+			../compat/pmk_string.h ../detect.h ../dynarray.h \
+			../errmsg.h ../hash.h ../parse.h ../pmk_obj.h \
+			../premake.h ../prseng.h gen_comp_test.c
+
+HASH_TEST_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+		../compat/pmk_stdio.h ../compat/pmk_string.h ../hash.h \
+		hash_test.c
+
+MKVAR_TEST_SRCS=	../common.h ../compat/config.h ../compat/pmk_stdbool.h \
+			../dynarray.h ../errmsg.h ../hash.h ../pmk_obj.h \
+			../premake.h mkvar_test.c
+
+PARSER_TEST_SRCS=	../cfgtool.h ../common.h ../compat/config.h \
+			../compat/pmk_stdbool.h ../dynarray.h \
+			../errmsg.h ../func.h ../hash.h ../parse.h \
+			../pmk.h ../pmk_obj.h ../premake.h ../prseng.h \
+			parser_test.c
+
+PATH_TEST_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+		../pathtools.h path_test.c
+
+PKGCONFIG_TEST_SRCS=	../common.h ../compat/config.h \
+			../compat/pmk_stdbool.h ../compat/pmk_stdio.h \
+			../dynarray.h ../errmsg.h ../hash.h \
+			../pkgconfig.h ../pmk_obj.h ../premake.h \
+			pkgconfig_test.c
+
+PLANG_TEST_SRCS=	../compat/config.h ../compat/pmk_stdbool.h \
+			../compat/pmk_stdio.h ../compat/pmk_string.h \
+			../parse_lang.h ../prseng.h plang_test.c
+
+#
+# target dependency lists
+#
+
+COMP_TEST_OBJS=	../common.o ../compat.o ../detect.o ../dynarray.o \
+		../hash.o ../parse.o ../pmk_obj.o ../prseng.o \
+		comp_test.o
+
+COMPAT_TEST_OBJS=	../compat.o compat_test.o
+
+CPUID_TEST_OBJS=	../common.o ../compat.o ../detect_cpu.o \
+			../detect_cpu_asm.o ../dynarray.o ../hash.o \
+			../parse.o ../pmk_obj.o ../prseng.o cpuid_test.o
+
+DA_TEST_OBJS=	../compat.o ../dynarray.o da_test.o
+
+GEN_COMP_TEST_OBJS=	../common.o ../compat.o ../detect.o ../dynarray.o \
+			../hash.o ../parse.o ../pmk_obj.o ../prseng.o \
+			gen_comp_test.o
+
+HASH_TEST_OBJS=	../common.o ../compat.o ../dynarray.o ../hash.o \
+		../pmk_obj.o hash_test.o
+
+MKVAR_TEST_OBJS=	../common.o ../compat.o ../dynarray.o ../hash.o \
+			../pmk_obj.o mkvar_test.o
+
+PARSER_TEST_OBJS=	../autoconf.o ../cfgtool.o ../common.o ../compat.o \
+			../detect.o ../dynarray.o ../func.o \
+			../functool.o ../hash.o ../hash_tools.o \
+			../parse.o ../pathtools.o ../pkgconfig.o \
+			../pmk_obj.o ../prseng.o parser_test.o
+
+PATH_TEST_OBJS=	../compat.o ../pathtools.o path_test.o
+
+PKGCONFIG_TEST_OBJS=	../common.o ../compat.o ../dynarray.o ../hash.o \
+			../hash_tools.o ../parse.o ../pkgconfig.o \
+			../pmk_obj.o ../prseng.o pkgconfig_test.o
+
+PLANG_TEST_OBJS=	../compat.o ../parse_lang.o ../prseng.o plang_test.o
+
+#
+# target lists
+#
+ALL_TARGETS=	comp_test compat_test cpuid_test da_test gen_comp_test \
+		hash_test mkvar_test parser_test path_test \
+		pkgconfig_test plang_test
+
+ALL_CLEAN_TARGETS=	comp_test_clean compat_test_clean \
+			cpuid_test_clean da_test_clean \
+			gen_comp_test_clean hash_test_clean \
+			mkvar_test_clean parser_test_clean \
+			path_test_clean pkgconfig_test_clean \
+			plang_test_clean
+
+# by default we consider all binaries as non privileged
+BIN_FILES=	$(ALL_TARGETS)
+
+#
+# generic targets
+#
+all: $(ALL_TARGETS)
+
+clean: $(ALL_CLEAN_TARGETS)
+
+#
+# object rules
+#
+../autoconf.o: $(___AUTOCONF_SRCS)
+
+
+../cfgtool.o: $(___CFGTOOL_SRCS)
+
+
+../common.o: $(___COMMON_SRCS)
+
+
+../compat.o: $(___COMPAT_SRCS)
+
+
+../detect.o: $(___DETECT_SRCS)
+
+
+../detect_cpu.o: $(___DETECT_CPU_SRCS)
+
+
+../detect_cpu_asm.o: $(___DETECT_CPU_ASM_SRCS)
+
+
+../dynarray.o: $(___DYNARRAY_SRCS)
+
+
+../func.o: $(___FUNC_SRCS)
+
+
+../functool.o: $(___FUNCTOOL_SRCS)
+
+
+../hash.o: $(___HASH_SRCS)
+
+
+../hash_tools.o: $(___HASH_TOOLS_SRCS)
+
+
+../parse.o: $(___PARSE_SRCS)
+
+
+../parse_lang.o: $(___PARSE_LANG_SRCS)
+
+
+../pathtools.o: $(___PATHTOOLS_SRCS)
+
+
+../pkgconfig.o: $(___PKGCONFIG_SRCS)
+
+
+../pmk_obj.o: $(___PMK_OBJ_SRCS)
+
+
+../prseng.o: $(___PRSENG_SRCS)
+
+
+comp_test.o: $(COMP_TEST_SRCS)
+
+
+compat_test.o: $(COMPAT_TEST_SRCS)
+
+
+cpuid_test.o: $(CPUID_TEST_SRCS)
+
+
+da_test.o: $(DA_TEST_SRCS)
+
+
+gen_comp_test.o: $(GEN_COMP_TEST_SRCS)
+
+
+hash_test.o: $(HASH_TEST_SRCS)
+
+
+mkvar_test.o: $(MKVAR_TEST_SRCS)
+
+
+parser_test.o: $(PARSER_TEST_SRCS)
+
+
+path_test.o: $(PATH_TEST_SRCS)
+
+
+pkgconfig_test.o: $(PKGCONFIG_TEST_SRCS)
+
+
+plang_test.o: $(PLANG_TEST_SRCS)
+
+
+
+#
+# target rules
+#
+comp_test: $(COMP_TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(COMP_TEST_OBJS)
+
+comp_test_clean:
+	$(RM) $(RMFLAGS) $(COMP_TEST_OBJS)
+	$(RM) $(RMFLAGS) comp_test
+
+compat_test: $(COMPAT_TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(COMPAT_TEST_OBJS)
+
+compat_test_clean:
+	$(RM) $(RMFLAGS) $(COMPAT_TEST_OBJS)
+	$(RM) $(RMFLAGS) compat_test
+
+cpuid_test: $(CPUID_TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(CPUID_TEST_OBJS)
+
+cpuid_test_clean:
+	$(RM) $(RMFLAGS) $(CPUID_TEST_OBJS)
+	$(RM) $(RMFLAGS) cpuid_test
+
+da_test: $(DA_TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(DA_TEST_OBJS)
+
+da_test_clean:
+	$(RM) $(RMFLAGS) $(DA_TEST_OBJS)
+	$(RM) $(RMFLAGS) da_test
+
+gen_comp_test: $(GEN_COMP_TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(GEN_COMP_TEST_OBJS)
+
+gen_comp_test_clean:
+	$(RM) $(RMFLAGS) $(GEN_COMP_TEST_OBJS)
+	$(RM) $(RMFLAGS) gen_comp_test
+
+hash_test: $(HASH_TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(HASH_TEST_OBJS)
+
+hash_test_clean:
+	$(RM) $(RMFLAGS) $(HASH_TEST_OBJS)
+	$(RM) $(RMFLAGS) hash_test
+
+mkvar_test: $(MKVAR_TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(MKVAR_TEST_OBJS)
+
+mkvar_test_clean:
+	$(RM) $(RMFLAGS) $(MKVAR_TEST_OBJS)
+	$(RM) $(RMFLAGS) mkvar_test
+
+parser_test: $(PARSER_TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(PARSER_TEST_OBJS)
+
+parser_test_clean:
+	$(RM) $(RMFLAGS) $(PARSER_TEST_OBJS)
+	$(RM) $(RMFLAGS) parser_test
+
+path_test: $(PATH_TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(PATH_TEST_OBJS)
+
+path_test_clean:
+	$(RM) $(RMFLAGS) $(PATH_TEST_OBJS)
+	$(RM) $(RMFLAGS) path_test
+
+pkgconfig_test: $(PKGCONFIG_TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(PKGCONFIG_TEST_OBJS)
+
+pkgconfig_test_clean:
+	$(RM) $(RMFLAGS) $(PKGCONFIG_TEST_OBJS)
+	$(RM) $(RMFLAGS) pkgconfig_test
+
+plang_test: $(PLANG_TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(PLANG_TEST_OBJS)
+
+plang_test_clean:
+	$(RM) $(RMFLAGS) $(PLANG_TEST_OBJS)
+	$(RM) $(RMFLAGS) plang_test
+
