@@ -1,3 +1,9 @@
+21 Aug 2005 mipsator
+ * replaced stdio.h by pmk_stdio.h.
+ * replaced old tests/Makefile.pmk by the one generated by pmkscan
+   (removed unneeded targets and install stuff).
+ * fixed tests so all compile without warnings.
+
 20 Aug 2005 mipsator
  * replaced old makefile template by the one generated by pmkscan
    (CFLAGS has been modified and added CONFDIR and PRIVSEP_USER).
